commit after arithmetic operators

--- a/Javascript/first.html
+++ b/Javascript/first.html
@@ -4,5 +4,6 @@
         <title></title>
     </head>
     <body></body>
-    <script type = "text/javascript" src="first.js"></script>
+    <!--<script type = "text/javascript" src="first.js"></script>-->
+    <script type = "text/javascript" src="operators.js"></script>
 </html>
