--- a/Javascript/first.html
+++ b/Javascript/first.html
@@ -5,5 +5,6 @@
     </head>
     <body></body>
     <!--<script type = "text/javascript" src="first.js"></script>-->
-    <script type = "text/javascript" src="operators.js"></script>
+    <!--<script type = "text/javascript" src="operators.js"></script>-->
+    <script type = "text/javascript" src="conditions.js"></script>
 </html>
