--- a/Javascript/first.html
+++ b/Javascript/first.html
@@ -6,5 +6,6 @@
     <body></body>
     <!--<script type = "text/javascript" src="first.js"></script>-->
     <!--<script type = "text/javascript" src="operators.js"></script>-->
-    <script type = "text/javascript" src="conditions.js"></script>
+    <!--<script type = "text/javascript" src="conditions.js"></script>-->
+    <script type = "text/javascript" src="loops.js"></script>
 </html>
