commit after function

--- a/Javascript/first.html
+++ b/Javascript/first.html
@@ -7,5 +7,6 @@
     <!--<script type = "text/javascript" src="first.js"></script>-->
     <!--<script type = "text/javascript" src="operators.js"></script>-->
     <!--<script type = "text/javascript" src="conditions.js"></script>-->
-    <script type = "text/javascript" src="loops.js"></script>
+    <!--<script type = "text/javascript" src="loops.js"></script>-->
+    <script type = "text/javascript" src="function.js"></script>
 </html>
