--- a/Javascript/first.html
+++ b/Javascript/first.html
@@ -8,5 +8,6 @@
     <!--<script type = "text/javascript" src="operators.js"></script>-->
     <!--<script type = "text/javascript" src="conditions.js"></script>-->
     <!--<script type = "text/javascript" src="loops.js"></script>-->
-    <script type = "text/javascript" src="function.js"></script>
+    <!--<script type = "text/javascript" src="function.js"></script>-->
+    <script type = "text/javascript" src="calculateSquare.js"></script>
 </html>
