--- a/Javascript/first.html
+++ b/Javascript/first.html
@@ -9,5 +9,6 @@
     <!--<script type = "text/javascript" src="conditions.js"></script>-->
     <!--<script type = "text/javascript" src="loops.js"></script>-->
     <!--<script type = "text/javascript" src="function.js"></script>-->
-    <script type = "text/javascript" src="calculateSquare.js"></script>
+    <!--<script type = "text/javascript" src="calculateSquare.js"></script>-->
+    <script type = "text/javascript" src="objects.js"></script>
 </html>
