commit after events

--- a/Javascript/first.html
+++ b/Javascript/first.html
@@ -3,7 +3,19 @@
     <head>
         <title></title>
     </head>
-    <body></body>
+    <body>
+        <!--
+        <input id = "btn-submit" type="button" value="Submit" onclick="buttonClick()">
+        <p id = "abc">Hello Hi</p>
+        <input type="text" value="">
+        -->
+
+        <form action="">
+            Name: <input type="text" id="txtname"/><br>
+            Age: <input type="text" id="txtage"/><br>
+            <button onclick="validateForm()">Submit</button>
+        </form>
+    </body>
     <!--<script type = "text/javascript" src="first.js"></script>-->
     <!--<script type = "text/javascript" src="operators.js"></script>-->
     <!--<script type = "text/javascript" src="conditions.js"></script>-->
@@ -11,5 +23,6 @@
     <!--<script type = "text/javascript" src="function.js"></script>-->
     <!--<script type = "text/javascript" src="calculateSquare.js"></script>-->
     <!--<script type = "text/javascript" src="objects.js"></script>-->
-    <script type = "text/javascript" src="BOM_object.js"></script>
+    <!--<script type = "text/javascript" src="BOM_object.js"></script>-->
+    <script type = "text/javascript" src="events.js"></script>
 </html>
